<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/alistitem"
    android:weightSum="3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:id="@+id/lblListItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:layout_marginLeft="50dp"
            android:layout_centerVertical="true"
            android:textColor="@color/colorAccent"
            android:singleLine="true"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblListItemDate"
            android:singleLine="true"
            android:gravity="top"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="@id/lblListItem"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lblListItem"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/btnItemEdit"
                android:background="@color/colorPrimary"
                android:drawableLeft="@drawable/orthex_green_box"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:paddingLeft="5dp"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="4dp"
                android:textSize="12sp"
                android:visibility="gone"
                android:text="@string/edit"/>
            <Button
                android:id="@+id/btnItemDispose"
                android:background="@color/colorPrimary"
                android:drawableLeft="@drawable/orthex_blue_box"
                android:textColor="@color/colorPrimaryDark"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:visibility="gone"
                android:text="@string/dispose"/>
            <Button
                android:id="@+id/btnItemDelete"
                android:background="@color/colorPrimary"
                android:drawableLeft="@drawable/orthex_orange_box"
                android:textColor="@color/colorPrimaryDark"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_width="0dip"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:textSize="12sp"
                android:visibility="gone"
                android:text="@string/delete"/>



        </LinearLayout>
    </RelativeLayout>
    </android.support.constraint.ConstraintLayout>