<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pdp.orthex.fragmentedapplication.NewItemFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textviewhelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/ETitemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="text|textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="259dp" />

    <Spinner
        android:id="@+id/targettime"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETitemName" />

    <Button
        android:id="@+id/btnDone" android:text="@string/done_button"
        android:layout_width="100dp" android:layout_height="40dp"

        android:background="@drawable/button1"
        android:backgroundTint="@color/colorOBlue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnNextItem"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/btnNextItem" android:text="@string/next_item"
        android:layout_width="100dp" android:layout_height="40dp"

        android:background="@drawable/button1"
        android:backgroundTint="@color/colorOGreen"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDone"
        app:layout_constraintBottom_toBottomOf="@+id/btnDone"
        android:gravity="center" />

    <Button
        android:id="@+id/btnPickImage" android:text="Pick Image"
        android:layout_width="100dp" android:layout_height="40dp"
        android:background="@drawable/button1"

        app:layout_constraintTop_toTopOf="@+id/btnDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnNextItem"
        app:layout_constraintBottom_toBottomOf="@id/btnDone"
        android:gravity="center" />


</FrameLayout>
